--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
- Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,python
 
 ### Python ###
